k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: uit-go
  labels:
    name: uit-go
    environment: production
